<resources>
    <!--  intro stuff-->
    <string name="app_name">Petsopedia</string>
    <string name="welcome_message">Tell us about your pet..</string>
    <string name="welcome_image">Drawing of a snail holding a welcome sign</string>
    <string name="button">Lets go!</string>

    <!--pet questionnaire-->
    <string name="pet_name">Pets Name</string>
    <string name="pet_type">Which Pet?</string>
    <string name="pet_breed">What Breed?</string>

    <!--pet information -->
    <string name="info_title">Pet Info</string>
    <string name="general">General Information</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="coat">Coat</string>
    <string name="colour">Colour</string>
    <string name="lifespan">Lifespan</string>
    <string name="personality">Personality</string>
    <string name="nutrition">Nutrition</string>
    <string name="health">Common Health Problems</string>
    <string name="sound">Sound</string>
    <string name="play">Play Button</string>
    <string name="pause">Pause Button</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="back_arrow">Back Arrow</string>

    <!-- explore/animal page -->
    <string name="explore_title">Explore</string>
    <string name="question_title">Your Pet</string>
    <string name="dogs">Dogs</string>
    <string name="cats">Cats</string>
    <string name="rabbits">Rabbits</string>
    <string name="birds">Birds</string>
    <string name="hamsters">Hamsters</string>
    <string name="choose_breed">Choose a Breed:</string>
    <string name="back_button"></string>
    <string name="go_button">Go</string>
    <string name="title_activity_maps">Map</string>

    <!-- map page -->
    <string name="vet_button">Vets</string>
    <string name="park_button">Parks</string>
    <string name="store_button">Pet Store</string>

    <!-- dogs -->
    <string name="alsatian">Alsatian</string>
    <string name="collie">Border Collie</string>
    <string name="labrador">Labrador</string>

    <!-- cats -->
    <string name="bombay">Bombay</string>
    <string name="shorthair">British Shorthair</string>
    <string name="persian">Persian</string>

    <!-- rabbits -->
    <string name="dutch">Dutch</string>
    <string name="lop">English Lop</string>
    <string name="giant">Flemish Giant</string>

<!-- labrador information -->
    <string name="lab_height">55-57cm</string>
    <string name="lab_weight">25-34kg</string>
    <string name="lab_coat">Short &amp; dense</string>
    <string name="lab_colour"> Yellow, black or chocolate</string>
    <string name="lab_lifespan">12-13 yrs</string>
    <string name="lab_personality">Kind, responsive, enthusiastic, active, playful. Good with children and friendly to other pets.</string>
    <string name="lab_nutrition">Needs between 1500 and 1875 calories per day, depending on body weight.</string>
    <string name="lab_health">Health issues include hip dysplasia, elbow dysplasia, obesity and progressive retinal atrophy.</string>


    <!-- alsatian information -->
    <string name="alsatian_height">24-26 inches (male), 22-24 inches (female)</string>
    <string name="alsatian_weight">65-90 pounds (male), 50-70 pounds (female)</string>
    <string name="alsatian_coat">Medium-length, double coat consisting of a dense, harsh, and close-lying outer coat with a softer undercoat</string>
    <string name="alsatian_colour">Saddle Coat, Black, Panda, Sable, White</string>
    <string name="alsatian_lifespan">12-14 yrs</string>
    <string name="alsatian_personality">Confident, Courageous, Smart</string>
    <string name="alsatian_nutrition">On the average, German Shepherds needs an average of 1740 and 2100 caloric intake.  While less active and older dogs may require lesser calorie count.</string>
    <string name="alsatian_health">Health issues include Degenerative Myelopathy (DM), Epilepsy, Gastric Dilatation Volvulous (aka Torsion or Bloat) and Hip and/or Elbow Dysplasia</string>

    <!-- collie information -->
    <string name="collie_height">Male: 48–56 cm, Female: 46–53 cm</string>
    <string name="collie_weight">Male: 14–20 kg, Female: 12–19 kg</string>
    <string name="collie_coat">There are two types of coat in the breed. The rough coat is medium-length and feathered, while the smooth coat is shorter and coarser. Both are dense, weather-resistant double coats.</string>
    <string name="collie_colour">Black, White, Blue, Blue Merle, Lilac, Brindle, Red Merle, Chocolate, Liver, Sable Merle, Gold, Red</string>
    <string name="collie_lifespan">10-17 yrs</string>
    <string name="collie_personality">Tenacious, Energetic, Intelligent, Keen, Responsive, Alert</string>
    <string name="collie_nutrition">A growing Border Collie would need 1,400 calories per day since they’re more likely to be highly active. For average adults, an average of 1,000 calories should be enough for them to thrive. While less active and older dogs may require lesser calorie count.</string>
    <string name="collie_health">Health issues include hip dysplasia, progressive renal atrophy, deafness, epilepsy, collie eye anomaly, neuronal ceroid lipofuscinosis, and trapped neutrophil syndrome.</string>

    <!-- bombay information -->
    <string name="bombay_height">12-13 inches (male), 11-12 inches (female)</string>
    <string name="bombay_weight">Male: large: 12 lbs. Female: medium: 8-12 lbs.</string>
    <string name="bombay_coat">Short and smooth</string>
    <string name="bombay_colour">Black</string>
    <string name="bombay_lifespan">9-13 yrs</string>
    <string name="bombay_personality">Active, curious cats and adapt very easily to change</string>
    <string name="bombay_nutrition">The Bombay breed does not have any special dietary requirements. As with all cats, it is recommended that you provide high-quality wet food and some quality dry food as well.</string>
    <string name="bombay_health">Both pedigreed cats and mixed-breed cats have varying incidences of health problems that may be genetic in nature. Bombays are generally healthy, although craniofacial defect may occur.</string>

    <!-- britshort information -->
    <string name="britshort_height">12-13 inches (male), 11-12 inches (female)</string>
    <string name="britshort_weight">Male: large: >5 kg. Female: large: >5 kg.</string>
    <string name="britshort_coat">Short/Medium and smooth</string>
    <string name="britshort_colour">White, Blue, Black, Cream, Red, Brown, Silver, Cameo, Bluecream, Tortoiseshell, Torbie, Smoke, Shaded</string>
    <string name="britshort_lifespan">7-12 yrs</string>
    <string name="britshort_personality">The British shorthair is a very pleasant cat to have as a companion. They are easy going and placid. The British shorthair is a fiercely loyal, loving cat and will attach themselves to all family members.</string>
    <string name="britshort_nutrition">Animal protein as British Shorthairs are muscular cats. Vegetable diets are largely unnecessary. Grains and dairy should be avoided.</string>
    <string name="britshort_health">British Shorthairs are prone to a disease called hypertrophic cardiomyopathy, which can lead to heart failure. Whilst this condition is not curable, it can be treated with lifelong medication.</string>

    <!-- persian information -->
    <string name="persian_height"> Males: 10 to 15 inches, Females: 10 to 14 inches </string>
    <string name="persian_weight">Males: 3.6 to 6.8 kg, Females: 3.2 to 4.5 kg</string>
    <string name="persian_coat">Long coat which requires daily grooming.</string>
    <string name="persian_colour">Tabby, Himalayan, smoke, shaded, solid, silver and bi-colour</string>
    <string name="persian_lifespan">12-15 years</string>
    <string name="persian_personality">The Persian has a sweet, gentle personality and is a quiet companion.</string>
    <string name="persian_nutrition">Persian cats need a balanced diet that consists of both wet and dry foods. Wet food in the morning and evening and having a fresh bowl of dry food and clean water available at all times. Protein is also very important for your Persian cat.</string>
    <string name="persian_health">Health issues include polycystic kidney disease (PKD), progressive retinal atrophy (PRA), hypertrophic cardiomyopathy (HCM), bladder stones, cystitis (bladder infections), and liver shunts</string>

    <!-- dutch information -->
    <string name="dutch_height"> Males: 8 to 10 inches, Females: 6 to 8 inches </string>
    <string name="dutch_weight">Small to medium, weighing about 2kg (4.5lb)</string>
    <string name="dutch_coat">Short, glossy fur. Minimal grooming required.</string>
    <string name="dutch_colour">White with black, blue, grey or chocolate markings.</string>
    <string name="dutch_lifespan">5-8 years</string>
    <string name="dutch_personality">Intelligent, gentle and easy to train - needs lots of social interaction.</string>
    <string name="dutch_nutrition">A rabbits daily diet should consist of: At least their own body size in hay. A handful of suitable fresh greens twice a day. One tablespoon of commercial rabbit nuggets (twice daily if your rabbit weighs over 3.5kg)</string>
    <string name="dutch_health">Dental disease, Respiratory tract disorders, Uterine cancer, Parasites, Gastrointestinal disorders.</string>

    <!-- giant information -->
    <string name="giant_height"> Males: 10 to 15 inches, Females: 10 to 14 inches </string>
    <string name="giant_weight">Large rabbits, weighing about 6-7kg</string>
    <string name="giant_coat">Short, glossy fur. Minimal grooming required.</string>
    <string name="giant_colour">Black, Blue, Fawn, Light Grey, Sandy, Steel Grey, White.</string>
    <string name="giant_lifespan">5-8 years</string>
    <string name="giant_personality">The Flemish Giant is generally a docile breed, and these giant pet rabbits make good companions and loving family pets.</string>
    <string name="giant_nutrition">A rabbits daily diet should consist of: At least their own body size in hay. A handful of suitable fresh greens twice a day. One tablespoon of commercial rabbit nuggets (twice daily if your rabbit weighs over 3.5kg)</string>
    <string name="giant_health">Dental disease, Respiratory tract disorders, Uterine cancer, Parasites, Gastrointestinal disorders.</string>

    <!-- lop information -->
    <string name="lop_height"> Males: 10 to 15 inches, Females: 10 to 14 inches </string>
    <string name="lop_weight">Large, weighing about 5kg (11lb).</string>
    <string name="lop_coat">Short, stiff fur. Minimal grooming required.</string>
    <string name="lop_colour">Fawn, white, black or gold.</string>
    <string name="lop_lifespan">5-7 years</string>
    <string name="lop_personality">Laid-back and inquisitive.</string>
    <string name="lop_nutrition">A rabbits daily diet should consist of: At least their own body size in hay. A handful of suitable fresh greens twice a day. One tablespoon of commercial rabbit nuggets (twice daily if your rabbit weighs over 3.5kg)</string>
    <string name="lop_health">Dental disease, Otitis, Respiratory tract disorders, Spinal injury, Parasites, Gastrointestinal disorders.</string>

</resources>