<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".PetInfoLabrador">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/backPetInfo"
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/back_arrow"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/labrador"
                android:textColor="@android:color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

        <TextView
            android:id="@+id/txResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageImg"
            android:layout_width="wrap_content"
            android:layout_height="249dp"
            android:padding="3dip"
            android:src="@drawable/lab"
            android:contentDescription="@string/labrador" />

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:fontFamily="serif"
                android:textSize="21sp"
                android:text="@string/general" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/height" />

            <TextView
                android:id="@+id/heightInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textSize="16sp"
                android:text="@string/lab_height" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <TextView
                android:id="@+id/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/weight" />

                        <TextView
                            android:id="@+id/weightInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:textSize="16sp"
                            android:text="@string/lab_weight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/coat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/coat" />

                        <TextView
                            android:id="@+id/coatInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:textSize="16sp"
                            android:text="@string/lab_coat" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/colour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/colour" />

                        <TextView
                            android:id="@+id/colourInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dip"
                            android:textSize="16sp"
                            android:text="@string/lab_colour" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

            <TextView
                android:id="@+id/lifespan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/lifespan" />

            <TextView
                android:id="@+id/lifespanInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textSize="16sp"
                android:text="@string/lab_lifespan" />
</LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/personality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:fontFamily="serif"
                android:textSize="21sp"
                android:text="@string/personality" />

            <TextView
                android:id="@+id/personalityInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textSize="16sp"
                android:text="@string/lab_personality" />

        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/nutrition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:fontFamily="serif"
                android:textSize="21sp"
                android:text="@string/nutrition" />

            <TextView
                android:id="@+id/nutritionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textSize="16sp"
                android:text="@string/lab_nutrition" />


        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view4"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:fontFamily="serif"
                android:textSize="21sp"
                android:text="@string/health" />

            <TextView
                android:id="@+id/healthInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:textSize="16sp"
                android:text="@string/lab_health" />


        <View
            android:layout_marginTop="10dp"
            android:id="@+id/view5"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>

            <TextView
                android:id="@+id/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dip"
                android:fontFamily="serif"
                android:textSize="21sp"
                android:text="@string/sound" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/playlistlistview">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/play"
                android:contentDescription="@string/play"
                android:id="@+id/playpauseicon"/>
            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0:00"
                android:textSize="18sp" />
            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/texttotal"
                android:text="0:00"
                android:textSize="18sp"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>