<?xml version="1.0" encoding="utf-8"?>
<!--////-->
<RelativeLayout

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <Button
        android:id="@+id/btn_petstore"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/buttons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="154dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="22dp"
        android:onClick="onClick"
        android:text="@string/store_button" />

    <Button
        android:id="@+id/btn_vets"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/buttons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="281dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="22dp"
        android:onClick="onClick"
        android:text="@string/vet_button" />

    <Button
        android:id="@+id/btn_parks"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/buttons"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="22dp"
        android:onClick="onClick"
        android:text="@string/park_button" />

</RelativeLayout>


