<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Explore">

    <TextView
        android:id="@+id/exploreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explore_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039"
        android:textSize="@dimen/h1_size"/>

    <!--    <Button-->
<!--        android:id="@+id/birdsBtn"-->
<!--        android:layout_width="@dimen/button_width"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/standard_yellow"-->
<!--        android:fontFamily="serif"-->
<!--        android:layout_margin="3dp"-->
<!--        android:text="@string/birds"-->
<!--        android:textAllCaps="false"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.523"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.952" />-->

<!--    <Button-->
<!--        android:id="@+id/hamstersBtn"-->
<!--        android:layout_width="@dimen/button_width"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/standard_yellow"-->
<!--        android:fontFamily="serif"-->
<!--        android:layout_margin="3dp"-->
<!--        android:textAllCaps="false"-->
<!--        android:text="@string/hamsters"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.538"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.845" />-->

    <Button
        android:id="@+id/rabbitsBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/standard_yellow"
        android:fontFamily="serif"
        android:text="@string/rabbits"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <Button
        android:id="@+id/dogsBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/standard_yellow"
        android:fontFamily="serif"
        android:text="@string/dogs"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651" />

    <Button
        android:id="@+id/catsBtn"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="@color/standard_yellow"
        android:fontFamily="serif"
        android:text="@string/cats"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="359dp"
        android:layout_height="356dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        app:srcCompat="@drawable/_9_dogwalker" />

    <Button
        android:id="@+id/backExplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-3dp" />


</androidx.constraintlayout.widget.ConstraintLayout>